# python-ci

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: geometry.py
tests/: test_geometry.py
